k8s/ingress-nginx/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-accelerator-svc
  namespace: ingress-nginx
spec:
  type: ClusterIP
  selector:
    app: ai-accelerator
  ports:
  - port: 5000
    targetPort: 5000
